// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import '$resolve.guardOnlyServer'
import eventstoreAdapter_constructor from \\"<MONOREPO_DIR>/tools/scripts/test/alias/files/testAdapter.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const eventstoreAdapter_imports = {  }
const eventstoreAdapter_options = {
  \\"url\\": \\"http://test.test\\"
}
const eventstoreAdapter = constructorBindFunction.bind(null,
      eventstoreAdapter_constructor,
      eventstoreAdapter_options,
      eventstoreAdapter_imports
    )
    Object.assign(eventstoreAdapter, eventstoreAdapter_constructor)
    
export default eventstoreAdapter
"
`;

exports[`config with process.env works correctly 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"
import '$resolve.guardOnlyServer'
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const eventstoreAdapter_constructor = ((moduleOrFile) => {
  return interopRequireDefault(__non_webpack_require__(moduleOrFile)).default
})((((first, second) => (first != null ? first : second))(process.env[\\"STORAGE_ADAPTER\\"], null)))
const eventstoreAdapter_imports = {  }
const eventstoreAdapter_options = {
  \\"url\\": (((first, second) => (first != null ? first : second))(process.env[\\"STORAGE_OPTIONS_URL\\"], null))
}
const eventstoreAdapter = constructorBindFunction.bind(null,
      eventstoreAdapter_constructor,
      eventstoreAdapter_options,
      eventstoreAdapter_imports
    )
    Object.assign(eventstoreAdapter, eventstoreAdapter_constructor)
    
export default eventstoreAdapter
"
`;
